Changed subprocess run user from current to k2hdkc

--- a/src/override.conf
+++ b/src/override.conf
@@ -29,7 +29,9 @@
 
 /etc/antpickax/k2hr3-get-resource-helper.conf:OUTPUT_FILE      = k2hdkc.ini
 /etc/antpickax/chmpx-service-helper.conf:CHMPX_INI_CONF_FILE   = k2hdkc.ini
+/etc/antpickax/chmpx-service-helper.conf:SUBPROCESS_USER       = k2hdkc
 /etc/antpickax/k2hdkc-service-helper.conf:K2HDKC_INI_CONF_FILE = k2hdkc.ini
+/etc/antpickax/k2hdkc-service-helper.conf:SUBPROCESS_USER      = k2hdkc
 
 #
 # Local variables:
