--- a/src/override.conf
+++ b/src/override.conf
@@ -27,11 +27,11 @@
 # Therefore, CHMPX_INI_CONF_FILE and K2HDKC_INI_CONF_FILE are replaced
 # by this file.
 
-/etc/antpickax/k2hr3-get-resource-helper.conf:OUTPUT_FILE      = k2hdkc.ini
-/etc/antpickax/chmpx-service-helper.conf:CHMPX_INI_CONF_FILE   = k2hdkc.ini
-/etc/antpickax/chmpx-service-helper.conf:SUBPROCESS_USER       = k2hdkc
-/etc/antpickax/k2hdkc-service-helper.conf:K2HDKC_INI_CONF_FILE = k2hdkc.ini
-/etc/antpickax/k2hdkc-service-helper.conf:SUBPROCESS_USER      = k2hdkc
+k2hr3-get-resource-helper.conf:OUTPUT_FILE      = k2hdkc.ini
+chmpx-service-helper.conf:CHMPX_INI_CONF_FILE   = k2hdkc.ini
+chmpx-service-helper.conf:SUBPROCESS_USER       = k2hdkc
+k2hdkc-service-helper.conf:K2HDKC_INI_CONF_FILE = k2hdkc.ini
+k2hdkc-service-helper.conf:SUBPROCESS_USER      = k2hdkc
 
 #
 # Local variables:
