Updated override.conf for k2hdkc.service and README.md

--- a/src/override.conf
+++ b/src/override.conf
@@ -27,11 +27,13 @@
 # Therefore, CHMPX_INI_CONF_FILE and K2HDKC_INI_CONF_FILE are replaced
 # by this file.
 
-k2hr3-get-resource-helper.conf:OUTPUT_FILE      = k2hdkc.ini
-chmpx-service-helper.conf:CHMPX_INI_CONF_FILE   = k2hdkc.ini
-chmpx-service-helper.conf:SUBPROCESS_USER       = k2hdkc
-k2hdkc-service-helper.conf:K2HDKC_INI_CONF_FILE = k2hdkc.ini
-k2hdkc-service-helper.conf:SUBPROCESS_USER      = k2hdkc
+k2hr3-get-resource-helper.conf:OUTPUT_FILE              = k2hdkc.ini
+chmpx-service-helper.conf:CHMPX_INI_CONF_FILE           = k2hdkc.ini
+chmpx-service-helper.conf:SUBPROCESS_USER               = k2hdkc
+k2hdkc-service-helper.conf:K2HDKC_INI_CONF_FILE         = k2hdkc.ini
+k2hdkc-service-helper.conf:SUBPROCESS_USER              = k2hdkc
+k2hdkc-service-helper.conf:WAIT_DEPENDPROC_PIDFILE      = /var/run/antpickax/chmpx.pid
+k2hdkc-service-helper.conf:WAIT_SEC_AFTER_DEPENDPROC_UP = 30
 
 #
 # Local variables:
