Enabled external customization of configure.ac and fixed for building

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,7 +20,7 @@
 
 SUBDIRS = src buildutils
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = RELEASE_VERSION
+EXTRA_DIST = RELEASE_VERSION @CONFIGURECUSTOM@
 
 #
 # Local variables:
