--- a/buildutils/k2hdkc-dbaas-override-conf.spec.in
+++ b/buildutils/k2hdkc-dbaas-override-conf.spec.in
@@ -39,6 +39,12 @@
 %global make_check 1
 %endif
 
+%if %{undefined not_run_autogen}
+%global run_autogen ./autogen.sh
+%else
+%global run_autogen echo "skip autogen.sh"
+%endif
+
 #
 # main package
 #
@@ -68,7 +74,7 @@ foundation for K2HDKC DBaaS.
 %autosetup -n %{name}-%{version}
 
 %build
-./autogen.sh
+%run_autogen
 %configure --disable-static @CONFIGUREWITHOPT@
 %make_build
 
