--- a/configure.ac
+++ b/configure.ac
@@ -101,6 +101,7 @@ AC_CONFIG_FILES([Makefile
 				buildutils/Makefile
 				buildutils/control
 				buildutils/copyright
+				buildutils/rules
 				buildutils/k2hdkc-dbaas-override-conf.spec
 				buildutils/k2hdkc-dbaas-override-conf.postinst])
 
