--- a/Makefile.am
+++ b/Makefile.am
@@ -22,6 +22,41 @@ SUBDIRS = src buildutils
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = RELEASE_VERSION @CONFIGURECUSTOM@
 
+.PHONY: shellcheck
+
+# [SHELLCHECK]
+# This make target executes shellchek on text files with the
+# extension '*.sh' under the current directory(other than the
+# '.git' directory) and executable files(text files other than
+# the extension '*.sh').
+#
+SHELLCHECK_CMD				= shellcheck
+SHELLCHECK_BASE_OPT			= --shell=sh
+SHELLCHECK_IGN_OPT			= --exclude=SC1117,SC1090,SC1091
+SHELLCHECK_INCLUDE_IGN_OPT	= --exclude=SC1117,SC1090,SC1091,SC2034,SC2148
+SHELLCHECK_FILES_NO_SH		= `grep -ril '^\#!/bin/sh' . | grep -v '\.sh' | grep -v '\.log' | grep -v '/\.git/' | grep -v '/rpmbuild/' | grep -v '/debian_build/' | grep -v '/autom4te.cache/' | grep -v '/m4/' | grep -v '/install-sh' | tr '\n' ' '`
+SHELLCHECK_FILES_SH			= `grep -ril '^\#!/bin/sh' . | grep '\.sh'    | grep -v '\.log' | grep -v '/\.git/' | grep -v '/rpmbuild/' | grep -v '/debian_build/' | grep -v '/autom4te.cache/' | grep -v '/m4/' | grep -v '/install-sh' | tr '\n' ' '`
+SHELLCHECK_FILES_INCLUDE_SH	= `grep -Lir '^\#!/bin/sh' . | grep '\.sh'    | grep -v '\.log' | grep -v '/\.git/' | grep -v '/rpmbuild/' | grep -v '/debian_build/' | grep -v '/autom4te.cache/' | grep -v '/m4/' | grep -v '/install-sh' | tr '\n' ' '`
+
+shellcheck:
+	@if type shellcheck > /dev/null 2>&1; then \
+		echo "*** Check all files with ShellCheck"; \
+		if [ -n "$(SHELLCHECK_FILES_NO_SH)" ]; then \
+			LC_ALL=C.UTF-8 $(SHELLCHECK_CMD) $(SHELLCHECK_BASE_OPT) $(SHELLCHECK_IGN_OPT) $(SHELLCHECK_FILES_NO_SH) || exit 1; \
+		fi; \
+		if [ -n "$(SHELLCHECK_FILES_SH)" ]; then \
+			LC_ALL=C.UTF-8 $(SHELLCHECK_CMD) $(SHELLCHECK_BASE_OPT) $(SHELLCHECK_IGN_OPT) $(SHELLCHECK_FILES_SH) || exit 1; \
+		fi; \
+		if [ -n "$(SHELLCHECK_FILES_INCLUDE_SH)" ]; then \
+			LC_ALL=C.UTF-8 $(SHELLCHECK_CMD) $(SHELLCHECK_BASE_OPT) $(SHELLCHECK_INCLUDE_IGN_OPT) $(SHELLCHECK_FILES_INCLUDE_SH) || exit 1; \
+		fi; \
+		echo "   -> No error was detected."; \
+		echo ""; \
+	else \
+		echo "ShellCheck is not installed, so skip check by it."; \
+		echo ""; \
+	fi
+
 #
 # Local variables:
 # tab-width: 4
