--- a/buildutils/k2hdkc-dbaas-override-conf.post-install.in
+++ b/buildutils/k2hdkc-dbaas-override-conf.post-install.in
@@ -1,3 +1,4 @@
+#!/bin/sh
 #
 # K2HDKC DBaaS Utilities - Override configuration for K2HDKC DBaaS
 #
@@ -14,18 +15,16 @@
 # the license file that was distributed with this source code.
 #
 # AUTHOR:   Takeshi Nakatani
-# CREATE:   Fri Jan 22 2021
+# CREATE:   Mon, Feb 13 2023
 # REVISION:
 #
 
-EXTRA_DIST =make_variables.sh \
-			make_release_version_file.sh \
-			make_rpm_changelog.sh \
-			make_postinst_script.sh \
-			debian_build.sh \
-			rpm_build.sh \
-			k2hdkc-dbaas-override-conf.install \
-			alpine_build_copy.conf
+#---------------------------------------------------------------------
+# Setup for ALPINE package
+#---------------------------------------------------------------------
+@POSTINST_SCRIPT_APK@
+
+exit 0
 
 #
 # Local variables:
