--- a/buildutils/k2hdkc-dbaas-override-conf.spec.in
+++ b/buildutils/k2hdkc-dbaas-override-conf.spec.in
@@ -81,6 +81,8 @@ foundation for K2HDKC DBaaS.
 %install
 %make_install
 install -D -m 644 src/override.conf %{buildroot}/etc/antpickax/override.conf
+mkdir -p %{buildroot}/var/lib/antpickax
+mkdir -p %{buildroot}/var/run/antpickax
 
 %post
 @POSTINST_SCRIPT_RPM@
@@ -94,6 +96,8 @@ install -D -m 644 src/override.conf %{buildroot}/etc/antpickax/override.conf
 %license COPYING
 %doc README AUTHORS ChangeLog
 /etc/antpickax/*
+%dir %attr(0777,root,root) /var/lib/antpickax
+%dir %attr(0777,root,root) /var/run/antpickax
 
 %changelog
 @RPMCHANGELOG@
